--- a/www/index.html
+++ b/www/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>taphold demo</title>
-    <link rel="stylesheet" href="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="jquery.mobile-1.4.5.min.css">
+    <script src="jquery-1.10.2.min.js"></script>
+    <script src="jquery.mobile-1.4.5.min.js"></script>
+    <link rel="stylesheet" href="fa/css/font-awesome.min.css">
     <style>
         html, body { padding: 0; margin: 0; }
         .keys tr { height: 50px; }
