--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>taphold demo</title>
+    <title>RPi Controller</title>
     <link rel="stylesheet" href="jquery.mobile-1.4.5.min.css">
     <script src="jquery-1.10.2.min.js"></script>
     <script src="jquery.mobile-1.4.5.min.js"></script>
@@ -57,9 +57,6 @@
     </table>
 </div>
 <textarea readonly="1"></textarea>
-<!--
-$('[data-cmd="up"]')
--->
 
 <script>
 var e;
